--- a/Beers/Base.lproj/Main.storyboard
+++ b/Beers/Base.lproj/Main.storyboard
@@ -15,9 +15,55 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" allowsSelection="NO" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="SBf-BY-lBS">
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" allowsMultipleSelection="YES" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="SBf-BY-lBS">
                                 <rect key="frame" x="0.0" y="144" width="414" height="752"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="none" indentationWidth="10" reuseIdentifier="beer_list_cell" rowHeight="140" id="Idp-JP-GHM" customClass="BeerListTableViewCell" customModule="Beers" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="28" width="414" height="140"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="Idp-JP-GHM" id="mVZ-Pp-ihS">
+                                            <rect key="frame" x="0.0" y="0.0" width="414" height="140"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="rUN-b5-JK0">
+                                                    <rect key="frame" x="20" y="11" width="42" height="21"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0FO-kd-l3G">
+                                                    <rect key="frame" x="352" y="11" width="42" height="21"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ptp-wb-k49">
+                                                    <rect key="frame" x="20" y="108.5" width="374" height="20.5"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstItem="ptp-wb-k49" firstAttribute="leading" secondItem="rUN-b5-JK0" secondAttribute="leading" id="47n-D7-5Wb"/>
+                                                <constraint firstAttribute="trailingMargin" secondItem="0FO-kd-l3G" secondAttribute="trailing" id="6BE-W5-qXx"/>
+                                                <constraint firstItem="0FO-kd-l3G" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="rUN-b5-JK0" secondAttribute="trailing" constant="5" id="9e5-hD-XTC"/>
+                                                <constraint firstItem="0FO-kd-l3G" firstAttribute="centerY" secondItem="rUN-b5-JK0" secondAttribute="centerY" id="Ada-mA-Bys"/>
+                                                <constraint firstAttribute="trailingMargin" secondItem="ptp-wb-k49" secondAttribute="trailing" id="Av9-Bg-i3V"/>
+                                                <constraint firstAttribute="bottomMargin" secondItem="ptp-wb-k49" secondAttribute="bottom" id="EOr-Nu-Hdl"/>
+                                                <constraint firstItem="rUN-b5-JK0" firstAttribute="leading" secondItem="mVZ-Pp-ihS" secondAttribute="leadingMargin" id="Gnp-nf-A5H"/>
+                                                <constraint firstItem="ptp-wb-k49" firstAttribute="top" relation="greaterThanOrEqual" secondItem="rUN-b5-JK0" secondAttribute="bottom" constant="10" id="J8B-dk-oDK"/>
+                                                <constraint firstItem="rUN-b5-JK0" firstAttribute="top" secondItem="mVZ-Pp-ihS" secondAttribute="topMargin" id="T2f-HH-Abb"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                        <connections>
+                                            <outlet property="abv" destination="0FO-kd-l3G" id="NhB-bz-rZ3"/>
+                                            <outlet property="name" destination="rUN-b5-JK0" id="xc7-Sf-IIU"/>
+                                            <outlet property="tagline" destination="ptp-wb-k49" id="Avw-X5-pPo"/>
+                                        </connections>
+                                    </tableViewCell>
+                                </prototypes>
                             </tableView>
                             <searchBar contentMode="redraw" translatesAutoresizingMaskIntoConstraints="NO" id="jx0-F9-pYK">
                                 <rect key="frame" x="0.0" y="88" width="414" height="56"/>
