--- a/Beers/Base.lproj/Main.storyboard
+++ b/Beers/Base.lproj/Main.storyboard
@@ -27,7 +27,7 @@
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="rUN-b5-JK0">
-                                                    <rect key="frame" x="20" y="11" width="42" height="21"/>
+                                                    <rect key="frame" x="20" y="11" width="42" height="20.5"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
@@ -38,27 +38,40 @@
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ptp-wb-k49">
-                                                    <rect key="frame" x="20" y="108.5" width="374" height="20.5"/>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="750" text="Label" textAlignment="right" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ptp-wb-k49">
+                                                    <rect key="frame" x="80" y="41.5" width="314" height="20.5"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="HCP-W2-RWh">
+                                                    <rect key="frame" x="20" y="47" width="50" height="10"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="10" id="Gn5-FJ-qvM"/>
+                                                        <constraint firstAttribute="width" constant="50" id="VuH-Ps-gm4"/>
+                                                    </constraints>
+                                                </imageView>
                                             </subviews>
                                             <constraints>
-                                                <constraint firstItem="ptp-wb-k49" firstAttribute="leading" secondItem="rUN-b5-JK0" secondAttribute="leading" id="47n-D7-5Wb"/>
                                                 <constraint firstAttribute="trailingMargin" secondItem="0FO-kd-l3G" secondAttribute="trailing" id="6BE-W5-qXx"/>
                                                 <constraint firstItem="0FO-kd-l3G" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="rUN-b5-JK0" secondAttribute="trailing" constant="5" id="9e5-hD-XTC"/>
                                                 <constraint firstItem="0FO-kd-l3G" firstAttribute="centerY" secondItem="rUN-b5-JK0" secondAttribute="centerY" id="Ada-mA-Bys"/>
                                                 <constraint firstAttribute="trailingMargin" secondItem="ptp-wb-k49" secondAttribute="trailing" id="Av9-Bg-i3V"/>
-                                                <constraint firstAttribute="bottomMargin" secondItem="ptp-wb-k49" secondAttribute="bottom" id="EOr-Nu-Hdl"/>
+                                                <constraint firstAttribute="bottomMargin" relation="greaterThanOrEqual" secondItem="ptp-wb-k49" secondAttribute="bottom" id="EOr-Nu-Hdl"/>
+                                                <constraint firstItem="ptp-wb-k49" firstAttribute="leading" secondItem="HCP-W2-RWh" secondAttribute="trailing" constant="10" id="GSp-0p-b14"/>
                                                 <constraint firstItem="rUN-b5-JK0" firstAttribute="leading" secondItem="mVZ-Pp-ihS" secondAttribute="leadingMargin" id="Gnp-nf-A5H"/>
-                                                <constraint firstItem="ptp-wb-k49" firstAttribute="top" relation="greaterThanOrEqual" secondItem="rUN-b5-JK0" secondAttribute="bottom" constant="10" id="J8B-dk-oDK"/>
+                                                <constraint firstItem="ptp-wb-k49" firstAttribute="top" secondItem="rUN-b5-JK0" secondAttribute="bottom" constant="10" id="J8B-dk-oDK"/>
                                                 <constraint firstItem="rUN-b5-JK0" firstAttribute="top" secondItem="mVZ-Pp-ihS" secondAttribute="topMargin" id="T2f-HH-Abb"/>
+                                                <constraint firstItem="HCP-W2-RWh" firstAttribute="centerY" secondItem="ptp-wb-k49" secondAttribute="centerY" id="np2-hd-Fmu"/>
+                                                <constraint firstItem="HCP-W2-RWh" firstAttribute="top" relation="greaterThanOrEqual" secondItem="rUN-b5-JK0" secondAttribute="bottom" priority="999" constant="10" id="o9l-XT-UdF"/>
+                                                <constraint firstItem="HCP-W2-RWh" firstAttribute="leading" secondItem="rUN-b5-JK0" secondAttribute="leading" id="p6g-yV-g2r"/>
+                                                <constraint firstAttribute="bottomMargin" relation="greaterThanOrEqual" secondItem="HCP-W2-RWh" secondAttribute="bottom" priority="999" id="ugg-Q7-Fqb"/>
                                             </constraints>
                                         </tableViewCellContentView>
                                         <connections>
                                             <outlet property="abv" destination="0FO-kd-l3G" id="NhB-bz-rZ3"/>
+                                            <outlet property="beerImage" destination="HCP-W2-RWh" id="GnH-LG-wRa"/>
+                                            <outlet property="imageViewHeightConstraint" destination="Gn5-FJ-qvM" id="Kxo-t6-rkJ"/>
                                             <outlet property="name" destination="rUN-b5-JK0" id="xc7-Sf-IIU"/>
                                             <outlet property="tagline" destination="ptp-wb-k49" id="Avw-X5-pPo"/>
                                         </connections>
